--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.4",
     "jquery": "^3.7.1",
+    "ng2-charts": "^4.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
