--- a/angular.json
+++ b/angular.json
@@ -71,10 +71,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "TDM_Admin_Screen:build:production"
+              "buildTarget": "TDM_Admin_Screen:build:production"
             },
             "development": {
-              "browserTarget": "TDM_Admin_Screen:build:development"
+              "buildTarget": "TDM_Admin_Screen:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "TDM_Admin_Screen:build"
+            "buildTarget": "TDM_Admin_Screen:build"
           }
         },
         "test": {
