--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ngx-pagination": "^6.0.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
+    "server": "^1.0.41",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
